waybar/style.css
@import 'colors-waybar.css';

* {
  border: none;
  border-radius: 0;
  font-family: "JetBrainsMono Nerd Font", Material, "Material Design Icons";
  font-size: 15px;
}

window#waybar {
  background-color:@background;
  color: @foreground;
  transition-property: background-color;
  transition-duration: .5s;
}

#workspaces button {
  background-color: @background;
  color: @foreground;
}

#workspaces button.visible {
  box-shadow: inset 0 -3px #887E61;

}

#workspaces button.focused {
  background-color: @background;
  color: @foreground;
  box-shadow: inset 0 -1px #887E61;
}

#workspaces button.urgent {
  background-color: #eb4d4b;
}

#clock {
  font-family: Jetbrains Mono Medium Nerd Font; 
  font-size: 15px;
  padding-top: 2px;
  background-color: @background;
  color: @foreground;
}

#battery {
  font-size: 14px;
  background-color: @background;
  color: @foreground;
  padding : 0 2px 0 10px;
}

#battery.status {
  font-size: 1px;
  color: @foreground;

}

#battery.charging {
  color: #ffffff;
  background-color: @background;
}

#battery.critical:not(.charging) {
  background-color: #f53c3c;
  color: #ffffff;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#network {
  padding : 0 10px 0 10px;
  font-size: 14px;
  background-color: @background; 
  color: @foreground;
}

#network.disconnected {
  background-color: #f53c3c;
}

#pulseaudio {
  padding : 0 10px 0 10px;
  font-size: 14px;
  background-color: @background;
  color: @foreground;
}

#pulseaudio.muted {
  background-color: @background;
  color: #2a5c45;
}

#tray {
  padding: 0 4px 0 10px;
}

#custom-media {
  background-color: #66cc99;
  color: #2a5c45;
  min-width: 100px;
}

#custom-media.custom-spotify {
  background-color: #66cc99;
}

#custom-media.custom-vlc {
  background-color: #ffa000;
}

